Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53332

Missing mapping of SSL errors between QSslError and QWebEngine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.2
    • 5.6.0
    • Documentation, WebEngine
    • None
    • c1f4f8f21b1b121e8a7aed3c41b93cbff1aaee18

    Description

      A table depicting the mapping between QSslError values and QWebEngineCertificateError values is missing inside the documentation (and/or porting guide).

      Concrete problem: I want to be able to catch QSslError::HostNameMismatch and handle it based on my development environment configuration. But which value is this one inside QWebEngineCertificateError???

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            leenam Leena Miettinen
            frechdachs69 Heiko Nardmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes