Doc: Explain why QSslError values are not used

Task-number: QTBUG-53332
Change-Id: Ia3e89287caae50ea043065cb97441ad9796c1dcc
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>